# mrav-cpu

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  requirements.in  requirements_lock.txt
core/: BUILD  core.go  serialization.go
core/proto/: BUILD  core.proto
deployments/led/: BUILD  sw.mrav
docs/: isa.md
hardware/rtl/: BUILD  constants.sv  core.sv  core_test.py  program.mrav
hardware/rtl/soc/: BUILD  gpio.sv  soc.sv
hardware/testbench/components/: BUILD  mrav_bus_memory.py
hardware/testbench/core/: BUILD  core.py
hardware/testbench/simulation/: BUILD  simulation.py
isa/: BUILD  isa.go  parsing.go
remote/cocotb/: BUILD
remote/mo/: BUILD
remote/protobuf/: BUILD
remote/py_protobuf/: BUILD
remote/pytest/: BUILD
remote/spew/: BUILD
software/asm/: BUILD  asm.go
software/asm/as/: BUILD  as.go
software/asm/firstpass/: BUILD  firstpass.go
software/asm/parsing/: BUILD  parsing.go
software/asm/secondpass/: BUILD  secondpass.go
software/build_defs/: mrav.bzl
software/examples/adding/: BUILD  adding.mrav  memory.mrav
software/examples/libraries/: BUILD  base.mrav  program.mrav  zero.mrav
software/format/: BUILD  binary.go  human.go
software/linker/: BUILD  linker.go
software/machinecode/: BUILD  machinecode.go
software/model/: BUILD  instructions.go  model.go
system/: BUILD  system.go
system/easybus/: BUILD  easybus.go
testing/codegen/: BUILD  codegen.mrav  nop_device.sv
testing/equivalence/: BUILD  equivalence_test.py
testing/functions/: BUILD  functions.mrav  functions_test.py
(+35 files in other folders)
