module(
    name = "mrav_cpu",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "1.0.0-rc2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_davecgh_go_spew",
    "com_github_samber_mo",
    "org_golang_google_protobuf",
)

PYTHON_VERSION = "3.9"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
